--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-        console.log("Hello World")
-    </script>
+    <button id="buttonRock">Rock</button>
+    <button id="buttonPaper">Paper</button>
+    <button id="buttonScissor">Scissor</button>
+    <div id="scoreText"></div>
     <script src="javascript.js"></script>
 </body>
 </html>
